[tool.poetry]
name = "pyrandomtools"
version = "0.1.3"
description = 'Random python functions organized into a module'
repository = 'http://github.com/rickalm/pyrandomtools'
license = "MIT"
authors = [
  "Rick Alm <rickealm@gmail.com>"
  ]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
